[package]
name = "chainlib"
version = "0.1.1"
authors = ["linfeng yuan <linfeng@crypto.com>"]
edition = "2021"
autoexamples = false
license = "Apache-2.0"
repository = "https://github.com/crypto-org-chain/chainlib-rslib-rs"
description = "A library to help with creating HD wallets and signing Crypto.org Chain transfer transactions offline."
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "encoding"]
keywords = ["blockchain", "chain", "cosmos", "tendermint", "transaction"]
exclude = ["cosmos-sdk-go/**", "tendermint/**"]

[dependencies]
serde = { version = "1.0.132", features = ["derive"], optional = true }
sorted-json = { version = "0.1.0", optional = true }
serde_json = { version = "1.0.72", optional = true }
tiny-bip39 = "0.8.2"
anyhow = { version = "1.0.51", features = ["std"] }
hdwallet = "0.3.0"
bitcoin_hashes = "0.10.0"
base64 = "0.13.0"
stdtx = "0.5.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
ledger-transport = { version = "0.8.0", optional = true }
ledger-transport-hid = { version = "0.8.0", optional = true }
ledger-zondax-generic = { version = "0.8.0", optional = true }
zx-bip44 = { version = "0.1.0", optional = true }
reqwest = { version = "0.11.7", features = ["json"] }
async-trait = "0.1.52"
log = "0.4.14"
tonic = { version = "0.6.2", optional = true }
eyre = "0.6.5"
prost = { version = "0.9.0", optional = true }
prost-types = { version = "0.9.0", optional = true }
hex = { version = "0.4.3", optional = true }

[build-dependencies]
prost-build = "0.9.0"
tonic-build = "0.6.2"
regex = "1.5.4"
walkdir = "2.3.2"

[[example]]
name = "amino"
path = "examples/example_amino.rs"
required-features = ["amino"]

[[example]]
name = "protobuf"
path = "examples/example_protobuf.rs"
required-features = ["grpc"]

[dev-dependencies]
env_logger = "0.9.0"

[features]
default = ["amino"]
ledger = [
    "ledger-zondax-generic",
    "ledger-transport-hid",
    "ledger-transport",
    "hex",
    "zx-bip44",
]
amino = ["serde", "serde_json", "sorted-json"]
grpc = ["tonic", "prost", "prost-types"]

[profile.release]
overflow-checks = true

[package.metadata.docs.rs]
all-features = true
